added form elements from the course module

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 			</ul>
 		</nav>
 	</header>
+
+	<form>
+		<div>
+			<label for="name">Full Name:</label>
+			<input id="name" type="text" name="name">
+		</div>
+		<div>
+			<label for="location">Zipcode:</label>
+			<input id="location" type="text" name="zipcode" autofocus="on" maxlength="5" required/>
+		</div>
+		<div>
+			<label for="form-message">Your message:</label>
+			<textarea name="message" id="form-message" autofocus="on" required maxlength="200"></textarea>
+		</div>
+		<button type="submit">Submit</button>
+		<button type="reset">Reset</button>
+	</form>
 </body>
 
 </html>
